--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,20 @@ p { select all <p>*/
 
 font-size: 1em;
 line-height: 1.5em;
+
+figcaption {
+  /*font-weight: normal;
+  font-size: 0.75em;
+  line-height: 1.5em;
+  font-family: Georgia, "New Times Roman" , serif;*/
+  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
+  color: #777;
+  text-align: right;
+
+  /*Class selector (applied to as many elements as you like)*/
+
+.milk-text { /* select elements with class="milk-text" */
+font: bold 2.6em 'Elsie Swash Caps', cursive;
+color: white;
+text-shadow: 0 2px 3px =000;
+}
