--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,26 @@ background: aqua;
 }
 
 /* Descendent Selector */
+#logo h1 {
+  font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
+}
+
+/* Pseudo Selectors -> use in various states, :link :visited - can add commas to do multiple at once  */
+#details a:link, a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#details a:active {
+  color: red;
+  text-decoration: underline;
+}
